# AudioPlay

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/liuxin/audioplay/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
audiolib/: CMakeLists.txt  build.gradle
audiolib/src/main/cpp/: Audio.cpp  Audio.h  AvPacketQuene.cpp  CallJava.cpp  CallJava.h  LXFFmpeg.cpp  LXFFmpeg.h  native-lib.cpp
audiolib/src/main/java/com/liuxin/audiolib/: LXPlayer.java
gradle/wrapper/: gradle-wrapper.properties
